--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "fs-extra": "^11.1.1",
     "get-port": "^6.1.2",
     "isbot": "^3.6.10",
-    "langchain": "^0.0.95",
     "litefs-js": "^1.1.2",
     "lru-cache": "^7.18.3",
     "morgan": "^1.10.0",
@@ -74,6 +73,7 @@
     "remix-auth": "^3.4.0",
     "remix-auth-form": "^1.3.0",
     "remix-auth-socials": "^2.0.5",
+    "remix-utils": "^6.6.0",
     "spin-delay": "^1.2.0",
     "tiny-invariant": "^1.3.1",
     "zod": "^3.21.4"
