--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "address": "^1.2.2",
     "autoprefixer": "^10.4.14",
     "bcryptjs": "^2.4.3",
-    "better-sqlite3": "^8.4.0",
     "cachified": "^3.5.4",
     "chalk": "^5.3.0",
     "chokidar": "^3.5.3",
@@ -143,7 +142,8 @@
     "typescript": "^5.1.6",
     "vite": "^4.4.2",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.33.0"
+    "vitest": "^0.33.0",
+    "bun-types": "latest"
   },
   "engines": {
     "node": "18"
@@ -151,5 +151,6 @@
   "epic-stack": true,
   "prisma": {
     "seed": "tsx prisma/seed.ts"
-  }
+  },
+  "module": "index.js"
 }
