--- a/package.json
+++ b/package.json
@@ -46,14 +46,14 @@
     "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@react-email/components": "^0.0.7",
-    "@remix-run/css-bundle": "^1.19.1",
-    "@remix-run/express": "^1.19.1",
-    "@remix-run/node": "^1.19.1",
-    "@remix-run/react": "^1.19.1",
-    "@remix-run/router": "^1.7.2",
-    "@remix-run/server-runtime": "^1.19.1",
+    "@remix-run/css-bundle": "^2.3.0",
+    "@remix-run/express": "^2.3.0",
+    "@remix-run/node": "^2.3.0",
+    "@remix-run/react": "^2.3.0",
+    "@remix-run/router": "^1.12.0",
+    "@remix-run/server-runtime": "^2.3.0",
     "@sentry/remix": "^7.59.2",
-    "address": "^1.2.2",
+    "address": "^2.0.1",
     "autoprefixer": "^10.4.14",
     "bcryptjs": "^2.4.3",
     "better-sqlite3": "^8.4.0",
@@ -71,6 +71,7 @@
     "eslint-plugin-remix-react-routes": "^1.0.5",
     "execa": "^7.1.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.4",
     "get-port": "^7.0.0",
     "helmet": "^7.0.0",
     "intl-parse-accept-language": "^1.0.0",
@@ -85,7 +86,7 @@
     "react-transition-group": "^4.4.5",
     "remix-auth": "^3.5.0",
     "remix-auth-form": "^1.3.0",
-    "remix-utils": "^6.6.0",
+    "remix-utils": "^7.1.0",
     "spin-delay": "^1.2.0",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "^3.3.2",
@@ -97,9 +98,9 @@
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
     "@playwright/test": "^1.36.1",
-    "@remix-run/dev": "^1.19.1",
-    "@remix-run/eslint-config": "^1.19.1",
-    "@remix-run/serve": "^1.19.1",
+    "@remix-run/dev": "^2.3.0",
+    "@remix-run/eslint-config": "^2.3.0",
+    "@remix-run/serve": "^2.3.0",
     "@sly-cli/sly": "^1.4.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@total-typescript/ts-reset": "^0.4.2",
@@ -112,7 +113,7 @@
     "@types/fs-extra": "^11.0.1",
     "@types/glob": "^8.1.0",
     "@types/morgan": "^1.9.4",
-    "@types/node": "^20.4.1",
+    "@types/node": "^20.9.2",
     "@types/qrcode": "^1.5.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
