--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "test:e2e:run": "cross-env CI=true playwright test",
     "test:e2e:install": "npx playwright install --with-deps chromium",
     "typecheck": "tsc",
-    "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run"
+    "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run",
+    "stripe-listen": "stripe listen --forward-to localhost:3000/resources/stripe/hook"
   },
   "eslintIgnore": [
     "/node_modules",
@@ -87,6 +88,7 @@
     "remix-auth-form": "^1.3.0",
     "remix-utils": "^7.1.0",
     "spin-delay": "^1.2.0",
+    "stripe": "^14.14.0",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "^3.3.2",
     "tailwindcss-animate": "^1.0.6",
