--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
     "intl-parse-accept-language": "^1.0.0",
     "isbot": "^3.6.12",
     "litefs-js": "^1.1.2",
+    "logrocket": "^8.1.0",
+    "logrocket-react": "^6.0.3",
     "lru-cache": "^10.0.0",
     "morgan": "^1.10.0",
     "openai": "^3.3.0",
@@ -114,6 +116,7 @@
     "@types/express": "^4.17.17",
     "@types/fs-extra": "^11.0.1",
     "@types/glob": "^8.1.0",
+    "@types/logrocket-react": "^3.0.3",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.9.2",
     "@types/qrcode": "^1.5.1",
