--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "chokidar": "^3.5.3",
     "class-variance-authority": "^0.7.0",
     "close-with-grace": "^1.2.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.1",
     "compression": "^1.7.4",
     "confetti-react": "^2.5.0",
     "cross-env": "^7.0.3",
@@ -98,7 +98,8 @@
     "tailwindcss-animate": "^1.0.6",
     "tailwindcss-radix": "^2.8.0",
     "thirty-two": "^1.0.2",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
