--- a/package.json
+++ b/package.json
@@ -98,7 +98,8 @@
     "tailwindcss-animate": "^1.0.6",
     "tailwindcss-radix": "^2.8.0",
     "thirty-two": "^1.0.2",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
