--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
   "dependencies": {
     "@conform-to/react": "^0.7.4",
     "@conform-to/zod": "^0.7.4",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.4",
     "@hubspot/api-client": "^11.1.0",
@@ -91,6 +94,8 @@
     "react-transition-group": "^4.4.5",
     "remix-auth": "^3.5.0",
     "remix-auth-form": "^1.3.0",
+    "remix-auth-github": "^1.3.0",
+    "remix-auth-socials": "^2.1.0",
     "remix-utils": "^7.1.0",
     "spin-delay": "^1.2.0",
     "stripe": "^14.14.0",
@@ -99,6 +104,8 @@
     "tailwindcss-animate": "^1.0.6",
     "tailwindcss-radix": "^2.8.0",
     "thirty-two": "^1.0.2",
+    "tiny-invariant": "^1.3.3",
+    "twitter-api-v2": "^1.17.2",
     "zod": "^3.21.4",
     "zustand": "^4.5.4"
   },
