--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   "dependencies": {
     "@conform-to/react": "^0.7.4",
     "@conform-to/zod": "^0.7.4",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -59,6 +61,7 @@
     "@remix-run/router": "^1.12.0",
     "@remix-run/server-runtime": "^2.3.0",
     "@sentry/remix": "^7.59.2",
+    "@types/react-color": "^3.0.13",
     "address": "^2.0.1",
     "autoprefixer": "^10.4.14",
     "bcryptjs": "^2.4.3",
@@ -86,11 +89,15 @@
     "litefs-js": "^1.1.2",
     "logrocket": "^8.1.0",
     "lru-cache": "^10.0.0",
+    "moment": "^2.30.1",
     "morgan": "^1.10.0",
     "openai": "^3.3.0",
+    "puppeteer": "^24.0.0",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-image-crop": "^11.0.7",
     "react-transition-group": "^4.4.5",
     "remix-auth": "^3.5.0",
     "remix-auth-form": "^1.3.0",
@@ -106,6 +113,7 @@
     "thirty-two": "^1.0.2",
     "tiny-invariant": "^1.3.3",
     "twitter-api-v2": "^1.17.2",
+    "use-debounce": "^10.0.4",
     "zod": "^3.21.4",
     "zustand": "^4.5.4"
   },
