try to deploy db studio

--- a/fly.toml
+++ b/fly.toml
@@ -35,6 +35,10 @@ script_checks = [ ]
   handlers = [ "tls", "http" ]
   port = 443
 
+  [[services.ports]]
+  handlers = ["tls", "http"]
+  port = 5555
+
   [[services.tcp_checks]]
   grace_period = "1s"
   interval = "15s"
