--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "build:server": "tsx ./other/build-server.ts",
     "predev": "npm run build:icons --silent",
     "dev": "remix dev -c \"node ./server/dev-server.js\" --manual",
-    "prisma:studio": "prisma studio",
+    "prisma:studio": "tsx scripts/prisma-studio.ts",
     "format": "prettier --write .",
     "lint": "eslint .",
     "setup": "npm run build && prisma generate && prisma migrate deploy && prisma db seed && playwright install",
-    "start": "cross-env NODE_ENV=production node .",
+    "start": "cross-env NODE_ENV=production concurrently \"node .\" \"npm run prisma:studio\"",
     "start:mocks": "cross-env NODE_ENV=production MOCKS=true tsx .",
     "test": "vitest",
     "coverage": "vitest run --coverage",
@@ -73,6 +73,7 @@
     "close-with-grace": "^1.2.0",
     "clsx": "^2.0.0",
     "compression": "^1.7.4",
+    "concurrently": "^9.1.2",
     "confetti-react": "^2.5.0",
     "crisp-sdk-web": "^1.0.25",
     "cross-env": "^7.0.3",
@@ -81,9 +82,11 @@
     "eslint-plugin-remix-react-routes": "^1.0.5",
     "execa": "^7.1.1",
     "express": "^4.18.2",
-    "express-rate-limit": "^7.1.4",
+    "express-basic-auth": "^1.2.1",
+    "express-rate-limit": "^6.7.0",
     "get-port": "^7.0.0",
     "helmet": "^7.0.0",
+    "http-proxy-middleware": "^2.0.6",
     "intl-parse-accept-language": "^1.0.0",
     "isbot": "^3.6.12",
     "litefs-js": "^1.1.2",
@@ -92,6 +95,7 @@
     "moment": "^2.30.1",
     "morgan": "^1.10.0",
     "openai": "^3.3.0",
+    "prisma": "^5.1.1",
     "puppeteer": "^24.0.0",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
@@ -158,7 +162,6 @@
     "prettier": "^2.8.8",
     "prettier-plugin-sql": "^0.15.1",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "prisma": "^5.1.1",
     "remix-development-tools": "^1.2.2",
     "remix-flat-routes": "^0.5.10",
     "tsconfig-paths": "^4.2.0",
