--- a/fly.toml
+++ b/fly.toml
@@ -35,10 +35,6 @@ script_checks = [ ]
   handlers = [ "tls", "http" ]
   port = 443
 
-  [[services.ports]]
-  handlers = ["tls", "http"]
-  port = 5555
-
   [[services.tcp_checks]]
   grace_period = "1s"
   interval = "15s"
@@ -54,3 +50,12 @@ script_checks = [ ]
   timeout = "2s"
   tls_skip_verify = false
   headers = { }
+
+[[services]]
+  internal_port = 5555
+  protocol = "tcp"
+  processes = ["app"]
+
+  [[services.ports]]
+    handlers = ["tls", "http"]
+    port = 5555
