--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "lru-cache": "^10.0.0",
     "moment": "^2.30.1",
     "morgan": "^1.10.0",
-    "openai": "^3.3.0",
+    "openai": "^4.80.0",
     "prisma": "^5.1.1",
     "puppeteer": "^24.0.0",
     "qrcode": "^1.5.3",
@@ -117,11 +117,11 @@
     "tailwindcss-radix": "^2.8.0",
     "thirty-two": "^1.0.2",
     "tiny-invariant": "^1.3.3",
+    "tsx": "^3.12.7",
     "twitter-api-v2": "^1.17.2",
     "use-debounce": "^10.0.4",
     "zod": "^3.21.4",
-    "zustand": "^4.5.4",
-    "tsx": "^3.12.7"
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
