--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@google-recaptcha/react": "^2.3.2",
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.4",
     "@hubspot/api-client": "^11.1.0",
@@ -102,7 +103,6 @@
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
-    "react-google-recaptcha-v3": "^1.10.1",
     "react-image-crop": "^11.0.7",
     "react-transition-group": "^4.4.5",
     "remix-auth": "^3.5.0",
