--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.4",
     "@hubspot/api-client": "^11.1.0",
+    "@mdx-js/react": "^3.1.1",
     "@prisma/client": "^5.1.1",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
@@ -86,6 +87,7 @@
     "express-basic-auth": "^1.2.1",
     "express-rate-limit": "^7.1.4",
     "get-port": "^7.0.0",
+    "gray-matter": "^4.0.3",
     "helmet": "^7.0.0",
     "http-proxy-middleware": "^2.0.6",
     "intl-parse-accept-language": "^1.0.0",
@@ -93,6 +95,7 @@
     "litefs-js": "^1.1.2",
     "logrocket": "^8.1.0",
     "lru-cache": "^10.0.0",
+    "mdx-bundler": "^10.1.1",
     "moment": "^2.30.1",
     "morgan": "^1.10.0",
     "openai": "^4.80.0",
@@ -105,6 +108,7 @@
     "react-google-recaptcha-v3": "^1.10.1",
     "react-image-crop": "^11.0.7",
     "react-transition-group": "^4.4.5",
+    "remark-gfm": "^4.0.1",
     "remix-auth": "^3.5.0",
     "remix-auth-form": "^1.3.0",
     "remix-auth-github": "^1.3.0",
@@ -132,6 +136,8 @@
     "@remix-run/eslint-config": "^2.3.0",
     "@remix-run/serve": "^2.3.0",
     "@sly-cli/sly": "^1.4.5",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^5.17.0",
     "@total-typescript/ts-reset": "^0.4.2",
     "@types/bcryptjs": "^2.4.2",
