--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -118,6 +118,8 @@ jobs:
 
       - name: 🎭 Playwright tests
         run: npm run test:e2e:run
+        env:
+          RECAPTCHA_SITE_KEY: ${{ secrets.RECAPTCHA_SITE_KEY }}
 
       - name: 📊 Upload report
         uses: actions/upload-artifact@v4
