Add resume tailoring feature

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ RESEND_API_KEY="re_blAh_blaHBlaHblahBLAhBlAh"
 SENTRY_DSN="your-dsn"
 RECAPTCHA_SITE_KEY="your-site-key"
 RECAPTCHA_SECRET_KEY="your-secret-key"
+OPENAI_API_KEY="sk-proj-your-key-here"
+DEBUG_MODE=true
+SAVE_AI_RESPONSES=true
