--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "chalk": "^5.3.0",
     "chokidar": "^3.5.3",
     "class-variance-authority": "^0.7.0",
+    "claude": "^0.1.1",
     "close-with-grace": "^1.2.0",
     "clsx": "^2.0.0",
     "compression": "^1.7.4",
@@ -106,6 +107,8 @@
     "morgan": "^1.10.0",
     "openai": "^4.80.0",
     "pdf-parse-fork": "^1.2.0",
+    "posthog-js": "^1.335.2",
+    "posthog-node": "^4.18.0",
     "prisma": "^5.1.1",
     "puppeteer": "^24.0.0",
     "qrcode": "^1.5.3",
