--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ RECAPTCHA_SECRET_KEY="your-secret-key"
 OPENAI_API_KEY="sk-proj-your-key-here"
 DEBUG_MODE=true
 SAVE_AI_RESPONSES=true
+
+POSTHOG_API_KEY="your-posthog-api-key"
+POSTHOG_HOST="https://us.i.posthog.com"
