--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "tsx": "^3.12.7",
     "twitter-api-v2": "^1.17.2",
     "use-debounce": "^10.0.4",
+    "xlsx": "^0.18.5",
     "zod": "^3.21.4",
     "zustand": "^4.5.4"
   },
