--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "litefs-js": "^1.1.2",
     "logrocket": "^8.1.0",
     "lru-cache": "^10.0.0",
+    "lucide-react": "^0.564.0",
     "mammoth": "^1.11.0",
     "mdx-bundler": "^10.1.1",
     "moment": "^2.30.1",
